--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   },
   "dependencies": {
     "@prisma/client": "^6.1.0",
+    "@sparticuz/chromium": "^132.0.0",
     "@supabase/supabase-js": "^2.49.1",
     "@vercel/analytics": "^1.5.0",
     "bcryptjs": "^2.4.3",
     "next": "14.0.4",
-    "puppeteer": "^21.6.1",
+    "puppeteer-core": "^21.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -29,6 +30,7 @@
     "dotenv": "^16.4.5",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.0.4",
+    "puppeteer": "^21.6.1",
     "prisma": "^6.19.1",
     "typescript": "^5.3.3"
   }
